# ChangeLog for app-text/xmlto
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/xmlto/ChangeLog,v 1.26 2005/01/02 22:51:37 ciaranm Exp $

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  13 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> xmlto-0.0.15.ebuild,
  xmlto-0.0.17.ebuild, xmlto-0.0.18.ebuild:
  Force app-text/docbook-xml-dtd-4.2 series. Thanks to Simone Gotti
  <simone.gotti@email.it>, closing bug #67163.

*xmlto-0.0.18 (15 Sep 2004)

  15 Sep 2004; Mamoru KOMACHI <usata@gentoo.org> +xmlto-0.0.18.ebuild:
  Version bumped; bug #63624.

  07 Sep 2004; Tom Gall <tgall@gentoo.org> xmlto-0.0.17.ebuild:
  stable on ppc64

  13 May 2004; Stephen P. Becker <geoman@gentoo.org> xmlto-0.0.17.ebuild:
  Stable on mips.

  13 May 2004; Bryan Østergaard <kloeri@gentoo.org> xmlto-0.0.17.ebuild:
  Stable on alpha.

  15 Mar 2004; Stephen P. Becker <geoman@gentoo.org> xmlto-0.0.17.ebuild:
  Added ~mips keyword.

  07 Mar 2004; Jon Portnoy <avenj@gentoo.org> xmlto-0.0.17.ebuild :
  Stable on AMD64 to make repoman happy.

  07 Feb 2004; Lars Weiler <pylon@gentoo.org> xmlto-0.0.17.ebuild:
  stable on ppc

  01 Feb 2004; Jon Portnoy <avenj@gentoo.org> xmlto-0.0.17.ebuild :
  AMD64 keywords.

  14 Jan 2004; <gustavoz@gentoo.org> xmlto-0.0.15.ebuild:
  stable on hppa

  13 Jan 2004; <gustavoz@gentoo.org> xmlto-0.0.15.ebuild:
  added sparc keyword

*xmlto-0.0.17 (11 Jan 2004)

  11 Jan 2004; Mike Gardiner <obz@gentoo.org> xmlto-0.0.15.ebuild,
  xmlto-0.0.17.ebuild, files/xmlto-0.0.15-head-fix.patch,
  files/xmlto-head-fix.patch:
  New version

  11 Jan 2004; Mike Gardiner <obz@gentoo.org> xmlto-0.0.15.ebuild:
  Stylesheets dependency back in, we need it versioned so we get the manpages,
  or else we get things like bug #37797

  04 Jan 2004; Mike Gardiner <obz@gentoo.org> xmlto-0.0.15.ebuild: