@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xmlto/Attic/xmlto-0.0.18.ebuild,v 1.3 2005/01/01 16:44:26 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xmlto/Attic/xmlto-0.0.18.ebuild,v 1.4 2005/02/10 10:20:00 usata Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://cyberelk.net/tim/data/xmlto/stable/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~ppc ~sparc ~mips ~alpha ~arm ~amd64 ~ia64 ~ppc64"
+KEYWORDS="x86 ppc ~sparc ~mips ~alpha ~arm ~amd64 ~ia64 ~ppc64"
 IUSE=""
 
 DEPEND="app-shells/bash
