@@ -1,6 +1,9 @@
 # ChangeLog for app-text/xmlto
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xmlto/ChangeLog,v 1.26 2005/01/02 22:51:37 ciaranm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xmlto/ChangeLog,v 1.27 2005/02/10 10:20:00 usata Exp $
+
+  10 Feb 2005; Mamoru KOMACHI <usata@gentoo.org> xmlto-0.0.18.ebuild:
+  Stable on x86 and ppc.
 
   02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
   Change encoding to UTF-8 for GLEP 31 compliance
